{+CR} Improve printing