@@ -8,7 +8,6 @@
  */
 package tripleo.elijah;
 
-import java.io.*;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -32,4 +31,3 @@ public class Main {
 //
 //
 //
-//--add-opens java.base=all
